[package]
name = "yt-cast"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-process = "1.2.0"
async-std = "1.10.0"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.14"
rocket = "0.5.0"
rss = "2.0.3"
serde = { version = "1.0.133", features = ["derive"] }
serde-aux = "2.3.0"
serde_json = "1.0.68"
tempfile = "3.3.0"
thiserror = "1.0.44"
tokio = "1.12.0"
urlencoding = "2.1.0"
